# image_magick_q16

./: README.md  ffigen.yaml  magick_wand_bindings_ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/image_magick_q16_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: image_magick_q16.dart  image_magick_q16_bindings_generated.dart
lib/src/: affine_matrix.dart  channel_features.dart  channel_statistics.dart  drawing_wand.dart  drawing_wand_helpers.dart  extensions.dart  image_magick_q16.dart  kernel_info.dart  magick_compute.dart  magick_enums.dart  magick_global_methods.dart  magick_wand.dart  magick_wand_bindings_generated.dart  magick_wand_helpers.dart  pixel_info.dart  pixel_iterator.dart  pixel_iterator_helpers.dart  pixel_wand.dart  pixel_wand_helpers.dart  point_info.dart  segment_info.dart  type_metric.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  image_magick_q16.c
windows/: CMakeLists.txt
